syntax = "proto3";

package quadratic;

import "google/api/annotations.proto";

option go_package = ".";

service QuadraticEquationSolver {
  rpc SolveQuadraticEquation (QuadraticEquationRequest) returns (QuadraticEquationResponse){
    option (google.api.http) = {
      post: "/api/quadratic/solve"
      body: "*"
    };
  };
}

message QuadraticEquationRequest {
  double a = 1;
  double b = 2;
  double c = 3;
}

message QuadraticEquationResponse {
  repeated double roots = 1;
}